# SecureGuard

./: .gitattributes  .gitignore  ARTICLE_IMPLEMENTATION_VERIFICATION.md  ATTACK_SCENARIOS.md  BACKGROUND_SCREEN_SECURITY.md  BANKING_SECURITY_COMPLETE.md  BEFORE_AFTER_COMPARISON.md  BYPASS_ANALYSIS.md  CHANGELOG.md  COMPLETE_SUMMARY.md  CONTINUOUS_MONITORING_USAGE.md  EXPERT_PROOF_COMPLETE.md  FLAG_LESS_SECURITY.md  FLUTTER_INTEGRATION.md  FLUTTER_SETUP_COMPLETE.md  GITHUB_PUBLISH_STEPS.md  HIDDEN_LOGS_REFERENCE.md  HOW_SECURITY_WORKS_WITHOUT_INITIALIZE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  JITPACK_RELEASE_v1.1.0.md  MIGRATION_GUIDE.md  PENTESTER_HARDENED.md  PENTESTER_PROOF_COMPLETE.md  PRODUCTION_INTEGRATION.md  PRODUCTION_SUMMARY.md  PUBLISHING_GUIDE.md  PUBLISHING_SUCCESS.md  QUICK_REFERENCE.md  QUICK_REFERENCE_FLAGLESS.md  QUICK_START.md  README.md  README_API_DOCS.md  README_GITHUB.md  README_V2.md  RELEASE_NOTES_v1.1.0.md  SETUP_COMPLETE.md  STRING_ENCRYPTION_ADVANCED.md  (+11 more)
.github/: copilot-instructions.md
example/android/: settings.gradle.kts
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/lib/: main.dart
flutter_example/: AndroidManifest.xml  MainActivity.kt  MainApplication.kt  README.md  SETUP.md  build.gradle  main.dart  settings.gradle
secureguard/: build.gradle  consumer-rules.pro  proguard-rules.pro
secureguard/src/main/: AndroidManifest.xml
secureguard/src/main/cpp/: CMakeLists.txt  continuous_monitor.h  enforcement.h  native_bridge.cpp  native_bridge_hardened.cpp  security_checks.cpp  security_checks.h  self_protect.h
tools/: StringEncryptor.kt  StringEncryptorTool.kt
(+20 files in other folders)
